--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
   },
   "homepage": "https://github.com/Glenn409/Portfolio-Tracker#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^3.0.8",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.21.4",
     "sequelize-cli": "^5.5.1"
   }
