--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
+    "normalize.css": "^8.0.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^5.21.4",
