--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^3.0.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chart.js": "^2.9.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -29,12 +30,18 @@
     "jwt-decode": "^2.2.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "node-cron": "^2.0.3",
     "nodemon": "^2.0.2",
     "normalize.css": "^8.0.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "react-chartjs-2": "^2.9.0",
+    "redux-thunk": "^2.3.0",
     "sequelize": "^5.21.4",
     "sequelize-cli": "^5.5.1"
+  },
+  "devDependencies": {
+    "redux": "^4.0.5"
   }
 }
