--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.17.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "node-cron": "^2.0.3",
