--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "cryptocurrency-icons": "^0.16.1",
+    "cryptofont": "^0.1.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-collapsible": "^2.6.3",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
     "react-redux": "^7.2.0",
