--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-collapsible": "^2.6.3",
+    "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
     "react-moment": "^0.9.7",
     "react-native-crypto-icons": "^1.0.1",
+    "react-radio-buttons": "^1.2.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
