--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@amcharts/amcharts4": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.44",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
@@ -12,8 +13,10 @@
     "cryptocurrency-icons": "^0.16.1",
     "cryptofont": "^0.1.1",
     "jwt-decode": "^2.2.0",
+    "material-ui": "^0.20.2",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-autocomplete": "^1.8.1",
     "react-collapsible": "^2.6.3",
     "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
