--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Glenn409/Portfolio-Tracker#readme",
   "dependencies": {
+    "@material-ui/core": "^4.9.4",
     "axios": "^0.19.2",
     "bcrypt": "^3.0.8",
     "bcryptjs": "^2.4.3",
