--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-modal": "^3.11.1",
     "react-moment": "^0.9.7",
     "react-native-crypto-icons": "^1.0.1",
+    "react-particles-js": "^2.7.1",
     "react-radio-buttons": "^1.2.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
