--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "react-chartjs-2": "^2.9.0",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
