--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ COIN_MARKETCAP_APIKEY=bd7e4bfb-d6dd-4a10-b2fb-ca26831f415d
 
 JAWSDB_URL=mysql://s4igdlqbjmnhstjc:oms9mq5yvunc3lww@kil9uzd3tgem3naa.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/u7kn9hh4i785f5ja
 
+NODE_ENV=production
