--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "install": "cd client && npm install",
     "build": "cd client && npm run build",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
